...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter cat's name" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="rLe-hZ-SoV">
                                <rect key="frame" x="113" y="155" width="246" height="30"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="CatNameField"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter cat's age" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="igY-Br-pka">
                                <rect key="frame" x="113" y="195" width="246" height="30"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cID-f7-6kE">
                                <rect key="frame" x="276" y="78" width="91" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="SaveCatButton"/>
                                <state key="normal" title="Save Cat"/>
                                <connections>
                                    <action selector="onSaveCatSelected:" destination="Fxp-5k-eDz" eventType="touchUpInside" id="gLM-rf-RTW"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LpM-fU-s2K">
                                <rect key="frame" x="16" y="78" width="91" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="DeleteCatButton"/>
                                <state key="normal" title="Delete Cat"/>
                                <connections>
                                    <action selector="onDeleteCatSelected:" destination="Fxp-5k-eDz" eventType="touchUpInside" id="NAy-i1-iDh"/>
                                </connections>
                            </button>
                        </subviews>
...
